@@ -3,6 +3,7 @@ Version 1.11.2+dev:
    * Updated translations: Indonesian, Portuguese, Vietnamese
  * Miscellaneous and bug fixes
    * Switched to git version control. Hosting moved to SourceForge
+   * Improved: Autorevision based revision numbers in CMake.
 
 Version 1.11.2:
  * Add-ons client:
